@@ -54,6 +54,13 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.testfx</groupId>
+            <artifactId>openjfx-monocle</artifactId>
+            <version>jdk-12.0.1+2</version>
+            <scope>test</scope>
+        </dependency>
+
+        <dependency>
             <groupId>org.xerial</groupId>
             <artifactId>sqlite-jdbc</artifactId>
             <version>3.34.0</version>
@@ -82,8 +89,12 @@
                 <version>3.0.0-M4</version>
                 <configuration>
                     <forkCount>0</forkCount><!--otherwise fails trying to create fork-->
+                    <systemPropertyVariables>
+                        <headless>true</headless>
+                    </systemPropertyVariables>
                     <argLine>
                         --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
+                        --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
                     </argLine>
                 </configuration>
             </plugin>
